Got rollup build working

--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "description": "A d3-based flow chart web component",
   "source": "src/index.js",
-  "umd:main": "dist/viz-flowchart.umd.js",
   "module": "dist/viz-flowchart.module.js",
   "main": "dist/viz-flowchart.js",
   "scripts": {
-    "build": "microbundle --compress none",
-    "watch": "microbundle watch",
-    "serve": "servor . index.html 9000 --reload",
-    "dev": "concurrently \"npm run watch\" \"npm run serve\""
+    "build": "rollup --config",
+    "dev": "servor . index.html 9000 --reload"
   },
   "repository": {
     "type": "git",
@@ -22,13 +19,15 @@
     "url": "https://github.com/andyinabox/viz-flowchart/issues"
   },
   "homepage": "https://github.com/andyinabox/viz-flowchart#readme",
-  "dependencies": {},
+  "dependencies": {
+    "rollup": "^2.1.0"
+  },
   "peerDependencies": {
     "d3": "^5.15.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
-    "microbundle": "^0.11.0",
+    "rollup-plugin-terser": "^5.3.0",
     "servor": "^3.2.0"
   }
 }
