--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viz-flowchart",
+  "name": "@andyinabox/viz-flowchart",
   "version": "0.1.0",
   "description": "A d3-based flow chart web component",
   "source": "src/index.js",
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/andyinabox/viz-flowchart#readme",
   "dependencies": {
-    "rollup": "^2.1.0"
   },
   "peerDependencies": {
     "d3": "^5.15.0"
@@ -29,6 +28,7 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "rollup-plugin-terser": "^5.3.0",
-    "servor": "^3.2.0"
+    "servor": "^3.2.0",
+    "rollup": "^2.1.0"
   }
 }
